main.html and login_logout

--- a/templates/delete_trip.html
+++ b/templates/delete_trip.html
@@ -1,13 +1,8 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'main.html' %}
+
+{% block title %} Usuwanie {% endblock %}
+
+{% block body %}
     <h1>Czy napewno chcesz usunac {{trip.name}}</h1>
     <form  method="post">
         {% csrf_token %}
@@ -15,5 +10,4 @@
 
     </form>
 
-</body>
-</html>
+{% endblock %}
