--- a/moje_static/moje.css
+++ b/moje_static/moje.css
@@ -1,5 +1,14 @@
 body {
     color: #444;
     padding: 50px;
-
+}
+img {
+    width: 150px;
+    float: left;
+}
+.card {
+    width: 700px
+}
+.desc {
+    margin-left: 15px;
 }
