--- a/templates/trip_list.html
+++ b/templates/trip_list.html
@@ -1,15 +1,8 @@
-{% load static %}
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'moje.css' %}">
-</head>
-<body>
+{% extends 'main.html' %}
+
+{% block title %} Wyprawy {% endblock %}
+
+{% block body %}
             Hello {{user.username}}<br>
             <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
             <a class="btn btn-primary" href="{% url 'login' %}">Login</a>
@@ -28,5 +21,4 @@
     </div>
 
     {% endfor %}
-</body>
-</html>
+{% endblock %}
