--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,16 +3,16 @@
 {% block title %} Login {% endblock %}
 
 {% block body %}
-
-    <div class="card" style="width: 600px">
+    <div class="card" style="width: 600px;">
       <div class="card-body">
-          <h5 class="card-title">Login</h5>
-        <form method="post">
-            {% csrf_token %}
-            {{form}}
-            <button type="submit">Login</i></button>
-        </form>
+          <h5 class="card-title">Zaloguj się</h5>
+            <form role="form" method="post">
+                {% csrf_token %}
+                {{form}}
+                <button type="submit" class="btn btn-primary">Login</button>
+            </form>
       </div>
     </div>
+
 
 {% endblock %}
