--- a/templates/trip_list.html
+++ b/templates/trip_list.html
@@ -20,22 +20,28 @@
         </div>
     </div>
 
-     <p>Wyjazdy:</p>
         <a href="{% url 'nowy_wyjazd' %}"><button type="button" class="btn btn-secondary">Dodaj wyjazd</button></a>
     <br>
     <br>
 
     {% for trip in trips reversed %}
         <div class="card">
-                <img src="/media/{{trip.photo}}">
+            <h2> {{trip}} </h2>
+            <p> {{trip.description}} </p>
+            <div class="container">
+              <div class="row">
+                <div class="col"><img src="/media/{{trip.photo1}}"></div>
+                <div class="col"><img src="/media/{{trip.photo2}}"></div>
+                <div class="w-100"></div>
+                <div class="col"><img src="/media/{{trip.photo3}}"></div>
+                <div class="col"><img src="/media/{{trip.photo4}}"></div>
+              </div>
+            </div>
             <div class="card-body">
-                <h2> {{trip}} </h2>
-                <p> {{trip.description}} </p>
                 <a href="{% url 'edytuj_wyjazd' trip.id %}"><i class="fas fa-2x fa-edit"></i></a>
                 <a href="{% url 'usun_wyjazd' trip.id %}"><i class="fas fa-2x fa-trash-alt"></i></a>
             </div>
 
         </div>
-    <br>
     {% endfor %}
     {% endblock %}
