--- a/templates/trips_form.html
+++ b/templates/trips_form.html
@@ -3,10 +3,15 @@
 {% block title %} Zapisz {% endblock %}
 
 {% block body %}
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form }}
-
-            <button type="submit">Zapisz</button>
-    </form>
+    <div class="card" style="width: 800px">
+      <div class="card-body">
+          <h5 class="card-title">Save</h5>
+        <form role="role" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{form}}
+            <a href="{% url 'wszystkie_wyjazdy' %}"><button type="button" class="btn btn-success">Cofnij</button></a>
+            <button type="submit" class="btn btn-primary">Zapisz</button>
+        </form>
+      </div>
+    </div>
 {% endblock %}
