--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="{% static 'moje.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'lightbox.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'lightbox.css' %}">
     <script src="{% static 'lightbox-plus-jquery.js' %}"></script>
 
     <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css>
@@ -18,5 +18,14 @@
 <body>
     <br>
     {% block body %} {% endblock %}
+        <br>
+    <div>
+        <br>
+          <br>
+          <br>
+        <div class="card">
+        <h6 class="display-8">Kontakt: Mieczysław Domański, email: mieczyslawdomanski@wp.pl</h6>
+        </div>
+    </div>
 </body>
 </html>
