--- a/templates/main.html
+++ b/templates/main.html
@@ -7,8 +7,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="{% static 'moje.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'lightbox.css' %}">
-    <script src="{% static 'lightbox-plus-jquery.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'lightbox.min.css' %}">
+    <script src="{% static 'lightbox-plus-jquery.min.js' %}"></script>
 
     <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
