web page Heroku

--- a/templates/trip_list.html
+++ b/templates/trip_list.html
@@ -9,7 +9,7 @@
 
     <div class="jumbotron">
         <div class="container">
-            <h2 class="display-5"><b>Zdjęcia z wypraw w polskie góry</b></h2>
+            <h2 class="display-5"><b>Moje zdjęcia z wypraw w polskie góry</b></h2>
             <p class="display-5">{% if user.is_authenticated %}
               Hello {{user.username}}<br></p>
 
